--- a/BLLL/BLL.csproj
+++ b/BLLL/BLL.csproj
@@ -41,11 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CitaVeterinariaService.cs" />
-    <Compile Include="MascotaService.cs" />
+    <Compile Include="GenericService.cs" />
+    <Compile Include="IGenericService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropietarioService.cs" />
-    <Compile Include="VeterinarioService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
