Implementacion de repositorios en la capa datos

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -45,5 +45,15 @@
     <Compile Include="IGenericService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{9b5669a2-22cb-439b-9561-bae1ac1fe817}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Entity\Entity.csproj">
+      <Project>{442b8286-85aa-4c76-a8a6-f8e530feddb4}</Project>
+      <Name>Entity</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
